{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 9,
  "lineage": "571eabd3-2040-3996-121c-2f8135cdb420",
  "resources": [
    {
      "module": "module.alb_backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:loadbalancer/app/rodrigo-alb-backend/4d067349dd1fcfd2",
            "arn_suffix": "app/rodrigo-alb-backend/4d067349dd1fcfd2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "rodrigo-alb-backend-1979407165.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:618889059366:loadbalancer/app/rodrigo-alb-backend/4d067349dd1fcfd2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "rodrigo-alb-backend",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-05db4fb9e01f08cec"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03fdc546a0142331e"
              },
              {
                "subnet_id": "subnet-052923fda6e51b8e4"
              }
            ],
            "subnets": [
              "subnet-03fdc546a0142331e",
              "subnet-052923fda6e51b8e4"
            ],
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-ALB-BACKEND",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-ALB-BACKEND",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "vpc_id": "vpc-08ec6da22571abbdc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:loadbalancer/app/rodrigo-alb-backend/4d067349dd1fcfd2"
          },
          "dependencies": [
            "module.security_group_alb.aws_security_group.this",
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:listener/app/rodrigo-alb-backend/4d067349dd1fcfd2/5415e1d19f23bb10",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:targetgroup/rodrigo-tg-backend/6a95570524149081",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:618889059366:listener/app/rodrigo-alb-backend/4d067349dd1fcfd2/5415e1d19f23bb10",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:loadbalancer/app/rodrigo-alb-backend/4d067349dd1fcfd2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-ALB-LISTENER",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-ALB-LISTENER",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:listener/app/rodrigo-alb-backend/4d067349dd1fcfd2/5415e1d19f23bb10"
          },
          "dependencies": [
            "module.alb_backend.aws_lb.this",
            "module.security_group_alb.aws_security_group.this",
            "module.subnet_public.aws_subnet.prod_public",
            "module.target_group_backend.aws_lb_target_group.this",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_routes",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "igw_route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04430aebb3b3cdf63",
            "id": "r-rtb-03123f0aa612487f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-03123f0aa612487f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-03123f0aa612487f8"
          },
          "dependencies": [
            "module.route_table_public.aws_route_table.this",
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:internet-gateway/igw-04430aebb3b3cdf63",
            "id": "igw-04430aebb3b3cdf63",
            "owner_id": "618889059366",
            "region": "us-east-2",
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b61b641a3c0f57d",
            "region": "us-east-2",
            "route_table_id": "rtb-03123f0aa612487f8",
            "subnet_id": "subnet-052923fda6e51b8e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table_public.aws_route_table.this",
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080fb598990c930ad",
            "region": "us-east-2",
            "route_table_id": "rtb-0010b7d294c202187",
            "subnet_id": "subnet-03fdc546a0142331e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_table_public.aws_route_table.this",
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:route-table/rtb-03123f0aa612487f8",
            "id": "rtb-03123f0aa612487f8",
            "owner_id": "618889059366",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "RouteTable-Public-APP-us-east-2a"
            },
            "tags_all": {
              "Name": "RouteTable-Public-APP-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "rtb-03123f0aa612487f8",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:route-table/rtb-0010b7d294c202187",
            "id": "rtb-0010b7d294c202187",
            "owner_id": "618889059366",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "RouteTable-Public-APP-us-east-2b"
            },
            "tags_all": {
              "Name": "RouteTable-Public-APP-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "rtb-0010b7d294c202187",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.subnet_public.aws_subnet.prod_public",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:security-group/sg-05db4fb9e01f08cec",
            "description": "Security Group para o ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05db4fb9e01f08cec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "RODRIGO-SG-ALB",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-ALB",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-ALB",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-05db4fb9e01f08cec",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:security-group/sg-0fe128f8983e3b9fd",
            "description": "Security Group para o ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe128f8983e3b9fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso do SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acesso do backend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "RODRIGO-SG-ECS",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-ECS",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-ECS",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-0fe128f8983e3b9fd",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:security-group/sg-0431fdbfea4b4077f",
            "description": "Security Group para o RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Saida para internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0431fdbfea4b4077f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acesso do ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe128f8983e3b9fd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "RODRIGO-SG-RDS",
            "name_prefix": "",
            "owner_id": "618889059366",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-RDS",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-SG-RDS",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafio EZOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "sg-0431fdbfea4b4077f",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.security_group_ecs.aws_security_group.this",
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:subnet/subnet-052923fda6e51b8e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052923fda6e51b8e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618889059366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Public-Subnet-AZ-2a"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ-2a"
            },
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "subnet-052923fda6e51b8e4",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:subnet/subnet-03fdc546a0142331e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fdc546a0142331e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618889059366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Public-Subnet-AZ-2b"
            },
            "tags_all": {
              "Name": "Public-Subnet-AZ-2b"
            },
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "subnet-03fdc546a0142331e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:targetgroup/rodrigo-tg-backend/6a95570524149081",
            "arn_suffix": "targetgroup/rodrigo-tg-backend/6a95570524149081",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:618889059366:targetgroup/rodrigo-tg-backend/6a95570524149081",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:618889059366:loadbalancer/app/rodrigo-alb-backend/4d067349dd1fcfd2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "rodrigo-tg-backend",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-TARGET-GROUP-BACKEND",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "RODRIGO-TARGET-GROUP-BACKEND",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08ec6da22571abbdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:618889059366:targetgroup/rodrigo-tg-backend/6a95570524149081"
          },
          "dependencies": [
            "module.vpc_app.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:618889059366:vpc/vpc-08ec6da22571abbdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0d98ccf39bba05c26",
            "default_route_table_id": "rtb-02c0736b71e39c2d3",
            "default_security_group_id": "sg-0ca95366e28af2a93",
            "dhcp_options_id": "dopt-0f98896da695f5bda",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ec6da22571abbdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c0736b71e39c2d3",
            "owner_id": "618889059366",
            "region": "us-east-2",
            "tags": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "VPC Rodrigo - Desafio EZOps",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            },
            "tags_all": {
              "Environment": "Test",
              "ManagedBy": "Terraform",
              "Name": "VPC Rodrigo - Desafio EZOps",
              "Owner": "Rodrigo Gomes",
              "Project": "Desafios EZOps"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "618889059366",
            "id": "vpc-08ec6da22571abbdc",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}